# coursework

./: .gitignore  CMakeLists.txt  UserInterface.sln
UserInterface/: CMakeLists.txt  Doxyfile  Header.h  Source.cpp  Test.cpp  UserInterface.vcxproj  UserInterface.vcxproj.filters
